# bankid-6

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  test.sh  test_runner.sh  test_script.py  tox.ini
src/bankid6/: __init__.py  client.py  exceptions.py  handlers.py  listify.py  message.py
src/bankid6/certs/: testCert.pem  testPrivateKey.pem
tests/: factories.py  test_client.py  test_exceptions.py  test_handlers.py  test_message.py
